--- a/everytime/everytime3/everytime_second/css/style.css
+++ b/everytime/everytime3/everytime_second/css/style.css
@@ -200,6 +200,9 @@ body {
 /*에브리타임 회원가입 페이지*/
 
 @media all and (min-width: 1100px) {
+  div.img_post {
+    width: 90vw;
+  }
 }
 div.everyborder {
   border: 2px solid lightgray;
@@ -319,6 +322,10 @@ input.postbox {
 }
 
 @media all and (max-width: 780px) {
+  div.img_post {
+    width: 90vw;
+  }
+
   div.everyborder {
     border: 2px solid lightgray;
     border-radius: 10px;
@@ -365,29 +372,26 @@ input.postbox {
 /*글 작성 페이지 구현*/
 
 input.sorry_1 {
-  padding-left: 20px;
   margin-top: 50px;
   margin-left: 30px;
   margin-right: 30px;
-  width: 1626px;
-  height: 100px;
+  width: 90vw;
+  height: 60px;
   border: 2px solid lightgray;
   border-bottom: 0px;
   font-size: 30px;
 }
 
-input.sorry_2 {
-  padding-left: 20px;
-  padding-top: 20px;
+textarea.sorry_2 {
   margin-left: 30px;
   margin-right: 30px;
-  width: 1626px;
+  width: 90vw;
+  height: 600px;
   display: flex;
   border: 2px solid lightgray;
-  padding-bottom: 700px;
-  font-size: 20px;
   color: rgb(66, 66, 66);
 }
+
 div.img_post {
   margin-left: 30px;
   margin-right: 30px;
@@ -395,6 +399,7 @@ div.img_post {
   border-left: 2px solid lightgray;
   border-right: 2px solid lightgray;
   border-bottom: 2px solid lightgray;
+  justify-content: space-between;
 }
 
 img.shrap {
@@ -408,28 +413,27 @@ img.clip {
 }
 
 div.checkboxandtext {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
   text-align: center;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 
 input.checkbox_1 {
-  margin-left: 1332px;
 }
 
 span.secret_1 {
-  padding-left: 10px;
+  margin-left: 5px;
   color: rgb(155, 155, 155);
 }
 
 input.checkbox_2 {
-  margin-left: 20px;
+  margin-left: 5px;
 }
 
 span.secret_2 {
-  padding-left: 9px;
-  padding-right: 21px;
+  margin-left: 5px;
+  margin-right: 5px;
   color: rgb(155, 155, 155);
 }
 
@@ -439,4 +443,24 @@ div.write {
   width: 50px;
   height: 50px;
   display: flex;
+  float: right;
+}
+
+div.infodiv {
+  margin-left: 30px;
+  margin-right: 30px;
+  width: 90vw;
+  display: flex;
+  border: 2px solid lightgray;
+  border-top: 0px;
+  color: rgb(49, 100, 109);
+  justify-content: center;
+  display: none;
+}
+
+p.info {
+  background-color: rgb(188, 241, 250);
+  border-radius: 10px;
+  font-size: 10px;
+  padding: 10px;
 }
