--- a/everytime/css/detail.css
+++ b/everytime/css/detail.css
@@ -1,56 +1,177 @@
-#container .title {
-    width: 641px;
-    margin-bottom: -1px;
-    box-sizing: border-box;
-    border: 1px solid #e3e3e3;
-    background-color: #fff;
+* {
     margin: 0;
     padding: 0;
-}
-
-.title > h3 {
-    display: block;
+    font-family: "Apple SD Gothic Neo", "맑은 고딕", "돋움", sans-serif;
+    -webkit-touch-callout: none;
+  }
+  
+  ul {
+    list-style: none;
+  }
+  
+  header {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 80px;
+    border-bottom: 1px solid #d6d6d6;
+    background-color: #fff;
+  }
+  
+  header .wrap {
+    width: 1180px;
+    height: 80px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  header .icon {
+    width: 25px;
+    height: 25px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 5px;
+    margin-left: 24px;
+  }
+  
+  #logo img {
+    width: 40px;
+    margin-left: 80px;
+    
+  }
+  
+  #logo .name {
+    margin-left: 5px;
+    color: red;
+    font-size: 12px;
+  }
+  
+  #logo .subname {
+    font-size: 22px;
+    margin-left: 5px;
+  }
+  
+  #logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  #menu {
+    display: flex;
+    list-style: none;
+  }
+  
+  #menu > li {
+    margin: 0 10px;
+    font-weight: bold;
+  }
+  
+  /* submenu */
+  #submenu {
+    margin-top: 80px;
+    background: #f4f4f4;
+  }
+  
+  #submenu .wrap {
+    box-sizing: border-box;
+    font-size: 0;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    overflow-x: auto;
     padding: 15px;
-    margin: 0px;
+  }
+  
+  #submenu .group {
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin-right: 15px;
+  }
+  
+  #submenu ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  #submenu li {
+    margin-bottom: 5px;
+    font-size: 13px;
+    color: #555;
+  }
+  
+  #submenu > div.wrap > div.divider {
+    display: inline-block;
+    width: 1px;
+    height: 200px;
+    margin-right: 15px;
+    background-color: #e3e3e3;
+  }
+  
+  .more {
+    color: red;
+    font-weight: bold;
+  }
+
+  /*본문*/
+  body > div {
+    background: #fff;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: relative;
+    margin: 0 auto 25px auto;
+  }
+
+body > div > section {
+    margin: 30px;
 }
 
+.title {
+    display: flex;
+    width: 780px;
+    margin-bottom: -20px;
+    padding: 15px;
+    border: 1px solid #d6d6d6;
+    box-sizing: border-box;
+}
+
+/*내용 전체*/
 .item {
-    margin-bottom: -1px;
     box-sizing: border-box;
     border: 1px solid #e3e3e3;
     background-color: #fff;
+    margin-top: 25px;
 }
-
+/*내용 전체*/
 .article {
     display: block;
     padding: 15px;
 }
 
-.status1 {
-    display: flex;
-    flex-direction: row;
-    margin-left: 50px;
-    text-align: right;
-}
-
-.profile1 {
+.profile {
     display: flex;
     flex-direction: row;
     color: #a6a6a6;
     font-size: 12px;
+    margin-bottom: 20px;
 }
 
-.profile1 > img {
+.profile > img {
     width: 40px;
     height: 40px;
     border-radius: 8px;
 }
 
-.profile2 {
+.info {
     margin-left: 10px;
 }
 
-.profile2 > h3 {
+.info > h3 {
     height: 20px;
     max-width: 200px;
     line-height: 20px;
@@ -60,11 +181,28 @@
     margin: 0;
 }
 
+.status {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    flex-grow: 1;
+}
+
+.status > li {
+    margin-left: 10px;
+}
+
+.article > h2{
+    margin-bottom: 20px;
+}
+
 .article .status2 {
     display: flex;
     flex-direction: row;
     font-size: 12px;
     text-align: center;
+    margin-top: 20px;
 }
 
 .article .status2 > img{
@@ -77,39 +215,58 @@
 .buttons {
     display: flex;
     flex-direction: row;
-    margin: 10px;
+    margin-top: 15px;
 }
 
-.buttons .posvote {
-    width: 70px;
-    height: 30px;
-    border-radius: 10px;
-    display: block;
-    box-sizing: border-box;
-    border: 1px solid #f9f9f9;
-    background-color: #f3f2f2;
+.posvote-btn{
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    width: 70px;
+    height: 30px;
+    border-radius: 7px;
+    background-color: #f3f2f2;
     align-items: center;
-    margin-right: 5px;
+    margin-right: 7px;
 }
 
-.posvote > img {
+.scrap-btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 77px;
+  height: 30px;
+  border-radius: 7px;
+  background-color: #f3f2f2;
+  align-items: center;
+  margin-right: 7px;
+}
+
+.posvote-btn > img {
     width: 15px;
     height: 15px;
-    margin-left: 6px;
-    margin-right: 3px;
+    margin-left: 4px;
 }
 
-.buttons .posvote > p {
+.scrap-btn > img {
+  width: 15px;
+  height: 15px;
+  margin-right: 2px;
+}
+
+.buttons .posvote-btn  > p {
     font-size: 12px;
     color: #737373;
     font-weight: bold;
-    margin-left: 2px;
+}
+
+.buttons .scrap-btn  > p {
+    font-size: 12px;
+    color: #737373;
+    font-weight: bold;
 }
 
 /*댓글*/
-
 .coments {
     display: block;
 }
@@ -184,19 +341,19 @@ div .parent2 .now {
     line-height: 20px;
 }
 
-.writecomment {
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    border-top: 1px solid #e3e3e3;
-    background-color: #f8f8f8;
+.writecomment-child {
+  margin: 0 4px 4px 35px;
+  border: 1px solid #e3e3e3;
+  background-color: #f8f8f8;
+  display: none;
+  flex-direction: row;
+  justify-content:space-between;
 }
 
-.writecomment input.text {
-    margin: 0;
-    padding: 10px 85px 10px 10px;
+.writecomment-child input.text-child {
+  padding: 10px 85px 10px 10px;
     border: 0;
-    width: 100%;
+    width: 85%;
     height: 40px;
     line-height: 20px;
     box-sizing: border-box;
@@ -207,33 +364,184 @@ div .parent2 .now {
     background-color: transparent;
 }
 
-#container > div > section > div.contents > div > article > div.coments > form > ul {
-    position: absolute;
-    right: 0;
-    top: 0;
+.option {
+  display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
     height: 40px;
-    font-size: 12px;
-    font-weight: bold;
+    margin: 0px;
+}
+
+.writecomment-child > ul > p {
+  color: #929292;
+  margin: 0 5px 0 5px;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.writecomment-child > ul > li {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 40px 40px;
+  cursor: pointer;
+  background-color: #f91f15;
+  background-image: url(../everytime_img/container.articles.write.submit.png);
+}
+
+.writecomment {
     display: flex;
     flex-direction: row;
+    justify-content:space-between;
+    border-top: 1px solid #e3e3e3;
+    background-color: #f8f8f8;
+}
+
+.writecomment input.text {
+    padding: 10px 85px 10px 10px;
+    border: 0;
+    width: 85%;
+    height: 40px;
+    line-height: 20px;
+    box-sizing: border-box;
+    color: #262626;
+    font-size: 13px;
+    overflow: hidden;
+    resize: none;
+    background-color: transparent;
+}
+
+.writecomment > ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+    height: 40px;
     margin: 0px;
+}
+
+input[type="checkbox"]:checked {
+  accent-color: red;
 }
 
 .writecomment > ul > p {
     color: #929292;
-    margin-right: 5px;
+    margin: 0 5px 0 5px;
+    font-size: 12px;
+    font-weight: bold;
 }
 
 
-#container > div > section > div.contents > div > article > div.coments > form > ul > li.submit {
+.writecomment .submit {
     display: inline-block;
     width: 40px;
     height: 40px;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 40px 40px;
-    margin-bottom: 5px;
     cursor: pointer;
     background-color: #f91f15;
+    margin-top: 3px;
+    border: 0;
     background-image: url(../everytime_img/container.articles.write.submit.png);
 }
+
+/*aside*/
+body > div > aside {
+    margin-top: 30px;
+  }
+  
+  .card {
+    margin-bottom: 5px;
+    border: 1px solid #d6d6d6;
+    background-color: #f9f9f9;
+  }
+  
+  .board .article {
+    display: block;
+    padding: 10px;
+    border-top: 1px solid #e3e3e3;
+  }
+  
+  .board > h3 {
+    color: #056ab5;
+    padding: 10px;
+  }
+  
+  .board > h3 > span {
+      float: right;
+      line-height: 20px;
+      color: #a6a6a6;
+      font-size: 12px;
+      font-weight: normal;
+  }
+  
+  .board .article > p {
+    height: auto;
+    line-height: 18px;
+    white-space: normal;
+    overflow: hidden;
+    color: #444444;
+    font-size: 13px;
+    margin-bottom: 5px;
+  }
+  
+  .post2 {
+    height: 18px;
+    font-weight: bold;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+  
+  p.small {
+    height: 32px;
+    line-height: 16px;
+    color: #737373;
+    font-size: 12px;
+  }
+  
+  .board .article > h4 { 
+      color: #a6a6a6;
+      font-size: 11px;
+      font-weight: bold;
+  }
+  
+  body > div > aside > div > div > h4 {
+    float: left;
+    margin-right: 10px;
+    height: 14px;
+    line-height: 14px;
+    color: #a6a6a6;
+    font-size: 11px;
+    font-weight: bold;
+  }
+  
+  .board .list {
+    display: block;
+    padding: 10px;
+    border-top: 1px solid #e3e3e3;
+  }
+  
+  .list > time {
+    float: right;
+    margin-left: 10px;
+    height: 17px;
+    line-height: 18px;
+    color: #a6a6a6;
+    font-size: 11px;
+    letter-spacing: 0;
+  }
+  
+  .list > p {
+    height: 17px;
+    line-height: 18px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: #444444;
+    font-size: 14px;
+  }
+  
