--- a/everytime/css/post.css
+++ b/everytime/css/post.css
@@ -1,4 +1,5 @@
-div.container {
+.post-write {
+    display: none;
     position: relative;
     margin-bottom: 5px;
     width: 780px;
@@ -50,6 +51,17 @@ ul.optoins {
     height: 40px;
 }
 
+#text-area {
+    display: flex;
+    width: 95%;
+    height: 350px;
+    font-size: 12px;
+    border: none;
+    border-bottom: 1px solid #d6d6d6;
+    justify-content: center;
+    padding: 10px;
+}
+
 .check {
     color: #929292;
     font-size: 14px;
@@ -58,7 +70,25 @@ ul.optoins {
     align-items: center;
     float: right;
     margin-right: 15px;
-    
+}
+
+.form > input {
+    padding-left: 10px;
+}
+
+.question-check {
+    accent-color: #28b9bb;
+    margin-right: 5px;
+}
+
+.anonym-check {
+    accent-color: #f91f15;
+    margin-left: 10px;
+    margin-right: 5px;
+}
+
+.question, .anonym {
+    font-weight: bold;
 }
 
 .optoins > input {
