--- a/everytime/css/login.css
+++ b/everytime/css/login.css
@@ -36,8 +36,8 @@ body {
   margin-bottom: 5px;
 }
 
-#id,
-#password {
+#id_username,
+#id_password {
   width: 100%;
   height: 35px;
   background-color: #f1f1f1;
